syntax = "proto3";

package hasadna.noloan;

import "Court.proto";
import "Sms.proto";

option java_package = "hasadna.noloan.protobuf";
option java_outer_classname = "LawsuitProto";

message Lawsuit {
    string firstName = 1;
    string lastName = 2;
    string userId = 3;
    string userAddress = 4;
    string userPhone = 5;

    string companyName = 6;
    string companyId = 7;
    string companyAddress = 8;
    string companyPhone = 9;
    string companyFax = 10;

    string dateReceived = 11;
    string claimAmount = 12;
    bool sentHaser = 13;
    bool moreThanFiveClaims = 14;

    SmsMessage smsMessage = 15;
}