syntax = "proto3";

package hasadna.noloan;

option java_package = "hasadna.noloan.protobuf";
option java_outer_classname = "SmsProto";

message SmsMessage {
    string sender = 1;
    string body = 2;
    string receivedAt = 3;
}

message SpamList {
    repeated SmsMessage sms = 1;
}